Completed Programming workshop 4

--- a/ECM1400 - Programming/Workshop4 - 14.10.25/Workshop_Week_4.ipynb
+++ b/ECM1400 - Programming/Workshop4 - 14.10.25/Workshop_Week_4.ipynb
@@ -26,15 +26,15 @@
    "id": "eae3e33c",
    "metadata": {},
    "source": [
-    "function\n",
+    "function - a self contained block of code, performing a specific task, that can be called, data passed into and return results\n",
     "\n",
-    "procedure\n",
+    "procedure - a function that doesn't return a useful result, e.g. TurnOnLights()\n",
     "\n",
-    "method\n",
+    "method - a fucntion associated with a class/object\n",
     "\n",
-    "module\n",
-    " \n",
-    "program"
+    "module - an external collection of libraries providing useful functionality\n",
+    "\n",
+    "program - a complete executable algorithm"
    ]
   },
   {
@@ -55,17 +55,17 @@
    "outputs": [],
    "source": [
     "def middle():\n",
-    "print(\"this prints out the fifth line\")\n",
+    "    print(\"this prints out the fifth line\")\n",
     "def start():\n",
-    "print(\"this prints out the first line\")\n",
+    "    print(\"this prints out the first line\")\n",
     "start()\n",
     "ordinals=['first','second','third','fourth','fifth','sixth']\n",
     "for i in range(1,4):\n",
-    "print(\"this prints out the\",ordinals[i],\"line\")\n",
+    "    print(\"this prints out the\",ordinals[i],\"line\")\n",
     "middle()\n",
     "printed=False\n",
     "while printed == False:\n",
-    "print(\"this prints out the\",ordinals[5],\"line\")\n",
+    "    print(\"this prints out the\",ordinals[5],\"line\")\n",
     "printed = True"
    ]
   },
@@ -125,8 +125,28 @@
    "execution_count": null,
    "id": "54bfcb16",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                             Hello\n",
+      "                                      Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def right_justify(s, width=70):\n",
+    "    # Calculate the number of spaces on the left side of the string s\n",
+    "    numOfWhitespace = width - len(s)\n",
+    "    # Create a string containing the number of spaces then the string s\n",
+    "    text = ' '*(numOfWhitespace) + s\n",
+    "    return text\n",
+    "\n",
+    "\n",
+    "print(right_justify(\"Hello\", 50))\n",
+    "print(right_justify(\"Hello World!\", 50))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -138,15 +158,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5f2431ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Joe Dunthorne would be limited to 157671 words out of 235887 (66%) without an e\n"
+     ]
+    }
+   ],
    "source": [
-    "with open('words.txt') as file: \n",
-    "    line_number = 1\n",
-    "    for line in file: \n",
-    "        print(line_number, line)"
+    "with open('words.txt') as file:\n",
+    "    total = 0\n",
+    "    count = 0\n",
+    "    wordsWithoutE = []\n",
+    "    for line in file:\n",
+    "        total += 1\n",
+    "        if 'e' in line:\n",
+    "            count += 1\n",
+    "            wordsWithoutE.append(line)\n",
+    "    print(\"Joe Dunthorne would be limited to\", count, \"words out of\", total, \"(\" + str(int((count/total)*100)) + \"%)\", \"without an e\")"
    ]
   },
   {
@@ -225,11 +259,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "95458a57",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32.0\n",
+      "1832.0\n",
+      "-40.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def c2f(c):\n",
+    "    return (9 * (c/5)) + 32\n",
+    "\n",
+    "print(c2f(0))\n",
+    "print(c2f(1000))\n",
+    "print(c2f(-40))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -243,11 +294,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d2075b02",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-17.77777777777778\n",
+      "537.7777777777778\n",
+      "-40.0\n",
+      "37.05555555555556\n",
+      "\n",
+      "0.0\n",
+      "1000.0000000000001\n",
+      "-40.0\n",
+      "98.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f2c(c):\n",
+    "    return ((c - 32) / 9) * 5\n",
+    "\n",
+    "print(f2c(0))\n",
+    "print(f2c(1000))\n",
+    "print(f2c(-40))\n",
+    "print(f2c(98.7), end=\"\\n\\n\")\n",
+    "\n",
+    "print(c2f(f2c(0)))\n",
+    "print(c2f(f2c(1000)))\n",
+    "print(c2f(f2c(-40)))\n",
+    "print(c2f(f2c(98.7)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -261,18 +341,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "840d30ef",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3025\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sumPowers(n, p):\n",
+    "    sum = 0\n",
+    "    for i in range(1,n + 1):\n",
+    "        sum += i ** p\n",
+    "    return sum\n",
+    "\n",
+    "print(sumPowers(10,3))"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "b5c070d2",
    "metadata": {},
    "source": [
-    "8. Using your function sumpowers(n,p) write a new function terms(big, p) that returns the number of terms (that is, n) that are needed for sumpowers(n, p) to be larger than big."
+    "8. Using your function sumpowers(n,p) write a new function terms(big, p) that returns the number of terms (that is, n) that are needed for sumpowers(n, p) to be larger than big. I.e. for what $n$ is $sumPowers(n,p) \\geq big$"
    ]
   },
   {
@@ -280,8 +376,24 @@
    "execution_count": null,
    "id": "0aa76835",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26773\n"
+     ]
+    }
+   ],
+   "source": [
+    "def terms(big, p):\n",
+    "    i = 1\n",
+    "    while sumPowers(i, p) < big:\n",
+    "        i += 1\n",
+    "    return i\n",
+    "\n",
+    "print(terms(128439283928477488, 3))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -312,11 +424,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "f404ddba",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "1.998046875\n",
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fracsum(number):\n",
+    "    sum = 0\n",
+    "    for i in range(number):\n",
+    "        sum += 0.5 ** i\n",
+    "    return sum\n",
+    "\n",
+    "print(fracsum(1))\n",
+    "print(fracsum(10))\n",
+    "print(fracsum(100))"
+   ]
   }
  ],
  "metadata": {
@@ -335,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
